<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Send Me Later</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="contact">The person you are sending message to:</string>
    <string name="choose_contact">Choose Contact</string>
    <string name="enter_message">Enter your message</string>
    <string name="send_it">Send it</string>
    <string name="add">Add</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="remove">remove</string>
    <string name="time_picker_title">Time sending your message</string>
    <string name="date_picker_title">Date sending your message</string>
    <string name="delete_message">delete</string>
    <string name="empty">"empty"</string>
    <string name="send_you_message_after">send msg 1 min after alarm</string>
    <string name="sendanyways">Send Message</string>
    <string name="cancel_message">Cancel Message</string>
    <string name="set_time">Set Time</string>
    <string name="choose_ringtone_button">Choose Music</string>

</resources>
